Added HTTP Handler to GET specific Pipeline
